2004-xx-xx v0.xx:
  * Fix error in configure script when printing exceptions not found message, due to unquoted string. (Reported by M.J. Soft)
  * Fix -G* when NGETCACHE != NGETHOME. (Reported by Steven Adeff)

2004-06-17 v0.27:
  * Cache file format change, so switch default NGETHOME to ~/.nget5.
    (Upgrade should be as simple as "mv ~/.nget4 ~/.nget5; rm ~/.nget5/*,cache*")
  * Don't store fileid codes in the cache file, instead calculate them when needed. (Can halve size of gzipped cache files.)
  * Change fileid calculation for single-part posts to include the message-id, fixes problem with multiple posts with the same subject/author not downloading when using -K.
  * Support IPv6 if available. (Can force off with configure --disable-ipv6)
  * If a hostname resolves to multiple ip addresses, try as many as needed to find one that works.
  * Add NGETRC environment variable to specify alternate config file directly.
  * Extend removal of identical dupe downloaded files to also cover incomplete/broken files. (Based on patch from Bram)
  * Add "update" and "updateage" -R keywords to select based upon when items were added to the cache.
  * Fix par2 handling not finding incomplete/broken files with non-lowercase names.
  * Fix compile with gcc-3.4.

2003-12-27 v0.26:
  * Add simplest possible example to manpage.
  * Don't use __attribute__ on non-GNU compilers.
  * Fix bug in knapsack algorithm that in some cases could cause a sub-optimal set of par2 files to be retrieved(or an assertion error on debug builds.)
  * Patched uulib to fix problem with long headers causing duplicate output in text files. (Patch also at http://nget.sf.net/patches/uulib-0.5.19-uuinfofile-long-headers.patch)
  * Fix memleak in goodgetcwd with long paths.
  * Fix goodgetcwd error handling.
  * Rewrite of config file code, all config values are error checked now, and unknown entries (typos) are warned about.
  * Some code cleanups and restructuring.